fix bug on small screens

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -130,7 +130,7 @@ main {
         display: flex;
         flex-flow: row-reverse;
         justify-content: space-between;
-        gap: 2rem;
+        gap: 1rem;
 
         img {
             max-height: 10rem;
